#16 JavaDoc and Formatting